# ai-solutions-portfolio

./: .env.template  .gitignore  DEPLOY.md  docker-compose.yml
_shared/: TERMS_OF_SERVICE.md  pyproject.toml
_shared/goodyseo_security/: __init__.py  audit.py  auth.py  cost_guard.py  gateway.py  middleware.py  rate_limiter.py
_shared/n8n_workflows/: README.md  content_flow.json  inbox_ai.json  meeting_ops.json  strategy_ai.json  trad_ai.json
cybersecurity/cyber-security-llm-agents/: .env_template  SECURITY.md  docker-compose.yml
docker/: Dockerfile.contentflow  Dockerfile.inboxai  Dockerfile.meetingops  Dockerfile.strategyai  Dockerfile.tradai
finance/stock_analysis/: .env.example  api_server.py
hr-recruitment/jobber/: .env.example
hr-recruitment/jobber/jobber/core/: playwright_manager.py
marketing/instagram_post/: api_server.py
marketing/marketing_strategy/: api_server.py
productivity/email_auto_responder_flow/: .env.example  api_server.py
productivity/meeting_assistant_flow/: .env.example  .gitignore  api_server.py
productivity/meeting_assistant_flow/src/meeting_assistant_flow/: main.py
real-estate/ai-real-estate-assistant/: .env.example  .gitignore  QUICKSTART.md  README.md  package.json  playwright.config.ts
real-estate/ai-real-estate-assistant/apps/api/: pyproject.toml  requirements.txt
real-estate/ai-real-estate-assistant/apps/web/: jest.config.ts  jest.setup.ts  lighthouse.config.js  next.config.ts  package-lock.json  package.json  (+1 more)
real-estate/ai-real-estate-assistant/scripts/: be.ps1  bootstrap.py  run.ps1  start.py  stop.ps1
(+161 files in other folders)
